--- a/datacentre/F10/CMakeLists.txt
+++ b/datacentre/F10/CMakeLists.txt
@@ -2,9 +2,9 @@
 # "demo.cxx" and "demo_b.cxx". The extensions are automatically found.
 include_directories(${PROJECT_SOURCE_DIR}/mptcp)
 file(GLOB HEADERS *.h)
-add_library (fattree fat_tree_topology.cpp ${HEADERS})
+add_library (f10 F10.cpp ${HEADERS})
 
 # Link the executable to the Hello library. Since the Hello library has
 # public include directories we will use those link directories when building
 # helloDemo
-target_link_libraries (fattree LINK_PUBLIC mptcp)
+target_link_libraries (f10 LINK_PUBLIC mptcp)
